Chore: Remove problems in the OwnerControllerTest